Request Guard API and Validatons

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,7 @@ android {
     compileSdkVersion 30
     lintOptions {
         disable 'InvalidPackage'
-        checkReleaseBuilds false //<- add this line
+        checkReleaseBuilds false
     }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
