--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_absolute_path:
   shared_preferences: ^2.0.4
   permission_handler: ^6.1.0
+  url_launcher:
   dio:
   toast:
   webview_flutter:
