--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons:
+  stripe_payment: ^1.0.11
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,7 @@ flutter:
    - assets/images/guardians.png
    - assets/images/home_car.png
    - assets/images/splash_new.png
+   - assets/images/ic_car_black.png
    - assets/images/security_officer.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
